<?xml version="1.0"?>
<package>
	<name>sf_simulation</name>
	<version>1.0.0</version>
	<description>Simulation stack for the sunflower robot</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>
	<!-- <url type="website">http://wiki.ros.org/sf_navigation</url> -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<!-- Use build_depend for packages you need at compile time: -->
	<!-- <build_depend>message_generation</build_depend> -->
	<!-- Use buildtool_depend for build tool packages: -->
	<!-- <buildtool_depend>catkin</buildtool_depend> -->
	<!-- Use run_depend for packages you need at runtime: -->
	<!-- <run_depend>message_runtime</run_depend> -->
	<run_depend>gazebo_ros</run_depend>
	<run_depend>sf_robot_description</run_depend>
	<run_depend>sf_navigation</run_depend>
	<run_depend>sf_environments</run_depend>
	<run_depend>person_sim</run_depend>
	<run_depend>webots</run_depend>
	<run_depend>rviz</run_depend>
	<run_depend>ros_control</run_depend>
	<run_depend>ros_controllers</run_depend>
	<buildtool_depend>catkin</buildtool_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>