<?xml version="1.0"?>
<package>
	<name>sf_base</name>
	<version>1.0.0</version>
	<description>Launch files for controlling the Sunflower Pioneer 3DX base</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>p2os_driver</run_depend>
	<run_depend>p2os_urdf</run_depend>
	<run_depend>hokuyo_node</run_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>