<?xml version="1.0"?>
<package>
	<name>sf_controller_msgs</name>
	<version>1.0.0</version>
	<description>Message definitions for Sunflower controller</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>message_generation</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>std_msgs</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>