<?xml version="1.0"?>
<package>
	<name>sf_dynamixel</name>
	<version>1.0.0</version>
	<description>Control and definitions for dynamixel AX-12 servos on Sunflower</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>dynamixel_controllers</run_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>