<?xml version="1.0"?>
<package>
	<name>sf_environments</name>
	<version>1.0.0</version>
	<description>University of Hertfordshire robot environments</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>map_server</run_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>