<?xml version="1.0"?>
<package>
	<name>sf_lights</name>
	<version>1.0.0</version>
	<description>Phidget based light service for the Sunflower robot</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>sf_lights_msgs</build_depend>
	<build_depend>phidget_drivers</build_depend>
	<run_depend>roscpp</run_depend>
	<build_depend>actionlib</build_depend>
	<run_depend>sf_lights_msgs</run_depend>
	<build_depend>phidget_drivers</build_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>