<?xml version="1.0"?>
<package>
	<name>sf_robot</name>
	<version>1.0.0</version>
	<description>Launch files for the Sunflower robot</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>sf_lights</run_depend>
	<run_depend>sf_controller</run_depend>
	<run_depend>sf_dynamixel</run_depend>
	<run_depend>sf_environments</run_depend>
	<run_depend>sf_base</run_depend>
	<run_depend>sf_robot_description</run_depend>
	<run_depend>p2os_dashboard</run_depend>
	<run_depend>p2os_teleop</run_depend>
	<run_depend>pr2_teleop</run_depend>
	<run_depend>joy</run_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>