<?xml version="1.0"?>
<package>
	<name>sf_teleop</name>
	<version>1.0.0</version>
	<description>Tele-operation package for the sunflower robot</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>	
	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>