<?xml version="1.0"?>
<package>
	<name>person_sim</name>
	<version>1.0.0</version>
	<description>Simulated 'person' robot</description>
	<maintainer email="n.burke@natbur.com">Nathan Burke</maintainer>
	<license>MIT</license>
	<!-- <url type="website">http://wiki.ros.org/sf_navigation</url> -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->

	<!-- Use build_depend for packages you need at compile time: -->
	<!-- <build_depend>message_generation</build_depend> -->
	<!-- Use buildtool_depend for build tool packages: -->
	<!-- <buildtool_depend>catkin</buildtool_depend> -->
	<!-- Use run_depend for packages you need at runtime: -->
	<!-- <run_depend>message_runtime</run_depend> -->
	<run_depend>move_base</run_depend>
	<run_depend>topic_tools</run_depend>
	<run_depend>dynamixel_msgs</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>hokuyo_node</run_depend>
	<run_depend>amcl</run_depend>
	<!-- Use test_depend for packages you need only for testing: -->
	<!-- <test_depend>gtest</test_depend> -->
	<buildtool_depend>catkin</buildtool_depend>
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>